--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typechain": "^8.1.0"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.4.2",
     "@openzeppelin/contracts": "^4.7.2",
     "ethers": "^5.6.9"
   }
