--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@ethersproject/providers": "^5.4.1",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.6",
     "@portis/web3": "^2.0.0-beta.54",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -13,7 +17,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pro-sidebar": "^1.0.0",
+    "react-pro-sidebar": "1.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
