--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
     "appService.zipIgnorePattern": [
         "node_modules{,/**}",
         ".vscode{,/**}"
-    ]
+    ],
+    "appService.defaultWebAppToDeploy": "/subscriptions/0d4040de-fde5-4149-a989-d25596197b82/AppServices/subscriptions/0d4040de-fde5-4149-a989-d25596197b82/resourceGroups/school/providers/Microsoft.Web/sites/Taloc",
+    "appService.deploySubpath": "my-app"
 }
