--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,10 @@
     "@ethersproject/providers": "^5.4.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
+    "@nivo/bar": "^0.80.0",
+    "@nivo/core": "^0.80.0",
+    "@nivo/geo": "^0.80.0",
+    "@nivo/line": "^0.80.0",
     "@portis/web3": "^2.0.0-beta.54",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
