--- a/my-app3/package.json
+++ b/my-app3/package.json
@@ -2,6 +2,9 @@
   "name": "react_dashboard",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "v18.14.0 ",
+    "yarn": "v1.22.19"},
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
