--- a/my-app3/package.json
+++ b/my-app3/package.json
@@ -2,7 +2,6 @@
   "name": "react_dashboard",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
@@ -38,7 +37,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -58,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "yarn-deduplicate": "^6.0.1"
   }
 }
