--- a/my-app3/package.json
+++ b/my-app3/package.json
@@ -30,7 +30,7 @@
     "react-multistep": "^5.5.8",
     "react-pro-sidebar": "1.0.0-alpha.7",
     "react-router-dom": "6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "0.32.11"
   },
